manual backup and added multihomes permission

--- a/permissions.yml
+++ b/permissions.yml
@@ -1,5 +1,5 @@
 server.basics:
-	description: Default Permissions
-	default: true
-	children:
-		simplehomes.multihomes
+  description: Default Permissions
+  default: true
+  children:
+    simplehomes.multihomes: true
